[project]
name = "Galben Coin"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
]
authors = [
  {name = "Galben Coin", email = "admin@galben.org"},
]
description = "A decentralized cryptocurrency platform."
readme = "README.md"
license = {text = "The MIT License (MIT)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Framework :: Blockchain",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Security :: Cryptography"
]

[project.urls]
Homepage = "https://www.galben.org/"
Documentation = "https://docs.galben.org/"
"Release notes" = "https://github.com/galbencoin/galbencoin/releases/"
Funding = "https://www.galben.org/fund/"
Source = "https://github.com/galbencoin/galbencoin"
Tracker = "https://github.com/galbencoin/galbencoin/issues"